--- a/Web.config
+++ b/Web.config
@@ -40,6 +40,17 @@
     </compilers>
   </system.codedom>
   <system.webServer>
+    <defaultDocument>
+      <files>
+        <remove value="default.aspx"/>
+        <remove value="Default.asp"/>
+        <remove value="index.html"/>
+        <remove value="iisstart.htm"/>
+        <remove value="index.htm"/>
+        <remove value="Default.htm"/>
+        <add value="Authentication.aspx"/>
+      </files>
+    </defaultDocument>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
